objects/Test_Case__c.object
<CustomObject>
 <fullName>Test_Case__c</fullName>
 <description>A library of test scripts that can be used to test against various functions, features and  apex resources like Apex Class and Apex Triggers.</description>
 <fields>
  <fullName>Automated__c</fullName>
  <defaultValue>false</defaultValue>
  <inlineHelpText>Set to true if the test case has an automated script version.</inlineHelpText>
  <label>Automated</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>Description__c</fullName>
  <inlineHelpText>Basic description of the test script purpose and steps.</inlineHelpText>
  <label>Description</label>
  <length>32768</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>Regression_Test__c</fullName>
  <defaultValue>false</defaultValue>
  <inlineHelpText>Is this test case a regression test?</inlineHelpText>
  <label>Regression Test</label>
  <type>Checkbox</type>
 </fields>
 <label>Test Script</label>
 <listViews>
  <fullName>All</fullName>
  <columns>NAME</columns>
  <columns>Description__c</columns>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <listViews>
  <fullName>All1</fullName>
  <filterScope>Everything</filterScope>
  <label>All</label>
 </listViews>
 <nameField>
  <displayFormat>TestScript-{00000}</displayFormat>
  <label>Test Script</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>Test Scripts</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>